fix: Fix bottom-aligned clipped offcanvas body

--- a/_sass/wtsa.scss
+++ b/_sass/wtsa.scss
@@ -407,6 +407,7 @@ strong code {
 }
 
 .offcanvas-body {
+	overflow-y: scroll;
 	&::-webkit-scrollbar {
 		display: none; /* Chrome, Safari and Opera */
 	}
